The functionality that permits to get data from UART to I2C bus. To Do : implement the I2C -> UART.

--- a/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Thu Apr 14 20:42:59 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=a5c804d0d4b14080debff2d6d93b991f
+#Sun Apr 17 19:51:14 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=5cf8976235a4f14dfcc3e6e526535ad9
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
 host.platform=windows
