--- a/CronoStart/I2C Gateway/Test Case/Source/I2CGatewayTest.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Test Case/Source/I2CGatewayTest.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Mon Apr 18 16:52:59 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=409feecf017503f7de1ade31a4749783
+#Mon Apr 18 21:48:41 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=3dfb4e18ef29e8cd2d1b00dbfaae9a3d
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
 host.platform=windows
