--- a/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Thu Apr 21 10:12:03 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Thu Apr 21 21:05:48 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=a9539d7ea42d58bd676c54b4fba75086
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
