--- a/CronoStart/I2C Gateway/Test Case/Source/I2CGatewayTest.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Test Case/Source/I2CGatewayTest.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Thu Apr 21 10:12:05 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Thu Apr 21 21:05:50 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=214a49591ab042d72b78da4db7541f14
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
