Project modifications on build

--- a/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Tue Apr 26 16:04:46 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Tue Apr 26 18:06:17 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=1084ac2b7427c2b2112f5f5334faf1aa
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
