Console can execute commands.

--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Thu Apr 28 20:45:52 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=59e5baf31ef19d2dfcc7473bb49b88ab
+#Sat Apr 30 11:37:10 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=804a81bab7e8f151627141eff8bf4d45
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
 host.platform=windows
