--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 *.dSYM/
 /CronoHub/CronoHub/nbproject/private/
 /CronoHub/CronoHub/build/
+/CronoWeb/nbproject/private/
+/CronoHub/TestClient/nbproject/private/
