--- a/CronoHub/TestClient/nbproject/project.properties
+++ b/CronoHub/TestClient/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/TestClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bcprov-jdk15on-154.jar=lib\\bcprov-jdk15on-154.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-jdk15on-154.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
