--- a/CronoStart/Crypto/Source/Crypto.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/Crypto/Source/Crypto.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Fri May 13 15:30:08 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Fri May 13 18:45:07 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=6a25385f3a9bf8e2bcaa11f0894909b9
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
 default.languagetoolchain.version=1.37
