GSM process. GSM simulator.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /CronoHub/CronoHub/build/
 /CronoWeb/nbproject/private/
 /CronoHub/TestClient/nbproject/private/
+/CronoStart/Simulator/SIM800H/nbproject/private/
+/CronoStart/Simulator/SIM800H/build/
+/CronoStart/Simulator/SIM800H/dist/
