--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Sun May 22 18:23:06 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
+#Mon May 23 15:07:25 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=deea1d6d7554628c4faaeaa68660a7a7
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
