SIM800H Simulator. GSM module interactive.

--- a/CronoStart/Simulator/SIM800H/nbproject/project.properties
+++ b/CronoStart/Simulator/SIM800H/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/SIM800H.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.RXTXcomm.jar=C:\\Program Files\\Java\\jre1.8.0_91\\lib\\RXTXcomm.jar
+file.reference.RXTXcomm.jar=RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
