--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Wed May 25 21:15:29 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=3019729ad01b8ecccd19766e5678735b
+#Thu May 26 11:08:50 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=c503c0f32f6526d899f315b62fc79214
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
 host.platform=windows
