Some modifications on GSM module. Test real life communication with GSM module: OK

--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Thu May 26 16:30:07 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=43129235600f45f841fab0376c45f21b
+#Thu May 26 22:08:31 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=9646d8a47b263a19b592cf03d5cac698
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
 host.platform=windows
