--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Fri May 27 12:28:03 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Sat May 28 17:02:54 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=43129235600f45f841fab0376c45f21b
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
