--- a/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/I2C Gateway/Source/I2C Gateway.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Fri Jun 03 13:15:02 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Sun Jun 05 18:29:18 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=2f08e8d99f6a2161cb3a1b8e47419e99
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
