--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Sun Jun 05 18:29:17 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
-configurations-xml=036c180b535270cc4648a63c03b7950b
+#Wed Jun 08 16:30:30 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+configurations-xml=55ef4f5009183010a07bf3573c91c994
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
 host.platform=windows
