Work on AT+CIPSEND to wait for cursor ">" before sending data.

--- a/CronoStart/Crypto/Source/Crypto.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/Crypto/Source/Crypto.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Wed Jun 08 20:46:30 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
+#Thu Jun 09 09:38:46 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=83f82910972dd7e2fc362d4014cd0cfd
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
