--- a/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
+++ b/CronoStart/MainUnit/Source/MainUnit.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,6 @@
 #
-#Thu Jun 09 11:46:58 EEST 2016
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v1.37\\bin
+#Thu Jun 09 19:49:06 EEST 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.37\\bin
 configurations-xml=e43c4ce6e452d339b015beeedb5db164
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=db82c52ca9004ff6941d647c285f6c5f
 default.languagetoolchain.version=1.37
