Decode received time result from CronoStart.

--- a/CronoStart/Simulator/SIM800H/nbproject/project.properties
+++ b/CronoStart/Simulator/SIM800H/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/SIM800H.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.RXTXcomm.jar=RXTXcomm.jar
+file.reference.RXTXcomm.jar-1=C:\\Program Files\\Java\\jre1.8.0_91\\lib\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${file.reference.RXTXcomm.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
